--- a/src/report/strukjual.jrxml
+++ b/src/report/strukjual.jrxml
@@ -17,6 +17,7 @@
 	<parameter name="kembalian" class="java.lang.String"/>
 	<parameter name="tgl" class="java.lang.String"/>
 	<parameter name="jam" class="java.lang.String"/>
+	<parameter name="namapelanggan" class="java.lang.String"/>
 	<queryString>
 		<![CDATA[select p.id_pesanan,m.nama_menu,concat('Rp ', format( p.harga_bayar, 0)) as harga_bayar, GROUP_CONCAT(nama_toping SEPARATOR ',') as toping,p.level from pesan_toping pt JOIN toping t ON(pt.id_toping=t.id_toping) RIGHT join pesanan p ON(p.id_pesan_toping=pt.id_pesan_toping) join menu m on (m.id_menu=p.id_menu) where p.id_pesanan = $P{id_pesanan} GROUP BY p.id_pesanan,p.harga_bayar,m.nama_menu]]>
 	</queryString>
@@ -52,13 +53,6 @@
 				</textElement>
 				<text><![CDATA[restoran apa ]]></text>
 			</staticText>
-			<staticText>
-				<reportElement style="Column header" x="66" y="0" width="58" height="15" forecolor="#736343" uuid="5f1e0a86-eee2-4bd9-b47c-f8c205340cb1"/>
-				<textElement textAlignment="Right">
-					<font size="7"/>
-				</textElement>
-				<text><![CDATA[id_pesanan]]></text>
-			</staticText>
 			<textField isStretchWithOverflow="true">
 				<reportElement style="Detail" x="66" y="15" width="58" height="11" uuid="b57aab71-1554-4d87-8b42-b331ea95964e"/>
 				<textElement textAlignment="Right">
@@ -79,6 +73,13 @@
 					<font size="6"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$P{jam}]]></textFieldExpression>
+			</textField>
+			<textField>
+				<reportElement x="59" y="0" width="65" height="10" uuid="77f2dc6a-1ce0-428d-bc4b-92a6bf88ee3e"/>
+				<textElement>
+					<font size="7"/>
+				</textElement>
+				<textFieldExpression><![CDATA[$P{namapelanggan}]]></textFieldExpression>
 			</textField>
 		</band>
 	</title>
